name of jar file changed

--- a/TODO
+++ b/TODO
@@ -6,3 +6,11 @@ https://www.youtube.com/watch?v=RVIbMuNs1aw&list=PLGRDMO4rOGcMLpqU4WsGKdpHIIAPjF
 https://www.youtube.com/watch?v=VR1zoNomG3w&ab_channel=JavaGuides
 #help to github actions
 https://github.com/orgs/community/discussions/24693
+
+# deploy the app with elastic Beanstalk
+https://www.youtube.com/watch?v=IV7rX7bJDJI
+https://www.youtube.com/watch?v=foOvn8hNBgQ
+
+
+# Deploy Spring Boot Application with Docker into AWS EC2
+https://www.youtube.com/watch?v=vmbhFZJUTR0
