name of jar file changed

--- a/TODO
+++ b/TODO
@@ -13,3 +13,9 @@ https://www.youtube.com/watch?v=foOvn8hNBgQ
 
 # Deploy Spring Boot Application with Docker into AWS EC2
 https://www.youtube.com/watch?v=vmbhFZJUTR0
+
+# die beste Methode
+https://www.youtube.com/watch?v=z7_LdCVnCRU
+https://www.youtube.com/watch?v=YDNSItBN15w
+https://www.fosstechnix.com/build-and-push-docker-image-to-aws-ecr-using-github-actions/
+https://medium.com/geekculture/github-actions-pipeline-to-push-docker-images-to-amazon-ecr-4bca6ec864bd
